重构nav.js数据渲染函数，增加基础函数,修改CSS细节

--- a/admin/index/index.html
+++ b/admin/index/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="../../static/admin/css/admin.css"/>
     <link rel="stylesheet" href="../../static/admin/css/all.min.css"/>
     <script src="../../static/admin/js/jquery-3.3.1.min.js"></script>
+    <script src="../../static/admin/js/basic.js"></script>
     <!--[if IE 8]>
     <script type="text/javascript" src="../../static/admin/js/jquery-1.11.3.min.js"></script>
     <![endif]-->
