--- a/admin/index/welcome.html
+++ b/admin/index/welcome.html
@@ -14,6 +14,8 @@
             height: 100%;
         }
     </style>
+    <script src="../../static/admin/js/jquery-3.3.1.min.js"></script>
+    <script src="../../static/admin/js/basic.js"></script>
 </head>
 <body>
 
@@ -303,7 +305,6 @@
         </div>
     </div>
 </div>
-<script src="../../static/admin/js/jquery-3.3.1.min.js"></script>
 <script src="../../static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
 <script src="../../static/admin/lib/echarts/echarts.js"></script>
 <script type="text/javascript">
