--- a/admin/index/welcome.html
+++ b/admin/index/welcome.html
@@ -433,10 +433,17 @@
         var h_name = [["need_do","other_do","personal_record"],["announce","sys_info","public_info"]],id=0;
         getData(data);
         $(".h_more").click(function(){
-            //console.log(id);
+            var page = $.getUrlParam("p",1);
             id = $(this).attr("data-id");
-            console.log($(".layui-nav-item a[data-id='"+14+"']",window.parent.document));
-            $(".layui-nav-item a[data-id='"+id+"']",window.parent.document)[0].click();
+            //console.log($(".layui-nav-item a[data-id='"+14+"']",window.parent.document));
+            if(page === "home"){
+                $(".layui-nav-item a[data-id='"+id+"']",window.parent.document)[0].click();
+            }else{
+                $.cookie("f", id, { expires: 1, domain: 'localhost' });
+                //window.cookie = encodeURIComponent("$(\".layui-nav-item a[data-id='"+id+"']\",window.parent.document)[0].click();");
+                window.parent.location.search = "?p=home";
+            }
+
         })
         function getData(data) {
             addData(h_name[0],data.task);
@@ -454,8 +461,6 @@
                                     .append($("<span>").attr("class","h_right col-xs-3").html(d[j][i].time))
                                 ))
                         }
-
-
                     }
                 }
 
