--- a/admin/index/announcement.html
+++ b/admin/index/announcement.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="UTF-8">
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport"
-          content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
     <title>表格</title>
     <link rel="stylesheet" type="text/css" href="../../static/admin/layui/css/layui.css"/>
     <link rel="stylesheet" type="text/css" href="../../static/admin/css/admin.css"/>
     <script src="../../static/admin/js/jquery-3.3.1.min.js"></script>
+    <!--[if IE 8]>
+    <script type="text/javascript" src="../../static/admin/js/jquery-1.11.3.min.js"></script>
+    <![endif]-->
+    <script src="../../static/admin/js/basic.js"></script>
     <style>
         #tips {
             position: fixed;
@@ -32,7 +34,7 @@
             width: auto;
         }
     </style>
-    <script src="../../static/admin/js/basic.js"></script>
+
 </head>
 
 <body>
@@ -130,6 +132,7 @@
                 addTableMessage(2,obj);//第二列显示message信息
             }
         });
+        frame_all({"back":true});//框架公共运行函数
         //监听行单击事件
         table.on('tool(table1)', function (obj) {
             var data = obj.data;
