--- a/admin/index/index.html
+++ b/admin/index/index.html
@@ -12,9 +12,8 @@
     <script src="../../static/admin/js/jquery-3.3.1.min.js"></script>
     <script src="../../static/admin/js/basic.js"></script>
     <!--[if IE 8]>
-    <script type="text/javascript" src="../../static/admin/js/jquery-1.9.1.min.js"></script>
+    <script type="text/javascript" src="../../static/admin/js/jquery-1.11.3.min.js"></script>
     <![endif]-->
-
     <style>
         .loading{
             font-size:2.5rem;
@@ -87,7 +86,7 @@
                         </a>
                     </li>
                     <li class="layui-nav-item items1">
-                        <a href="javascript:;" data-url="admin-info.html" data-id='5' data-text="个人信息" style="padding:0 10px;">
+                        <a href="javascript:;" data-url="admin-info.html" data-id='5' data-text="个人信息" style="padding:0 10px;overflow:hidden;">
                             <img src="../../static/admin/images/man.png" class="user_head" alt="用户头像">
                             <p class="names">
                                 <span class="h_name">李医生</span>
@@ -119,7 +118,6 @@
 
                     </ul>
                 </div>
-
                 <div class="layui-tab-content">
                     <div class="layui-tab-item layui-show" style="background: #f5f5f5;">
                         <!--内容页-->
