--- a/admin/index/show_messages.html
+++ b/admin/index/show_messages.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport"
-          content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
     <title>表格</title>
     <link rel="stylesheet" type="text/css" href="../../static/admin/layui/css/layui.css"/>
     <link rel="stylesheet" type="text/css" href="../../static/admin/css/admin.css"/>
     <script src="../../static/admin/js/jquery-3.3.1.min.js"></script>
+    <!--[if IE 8]>
+    <script type="text/javascript" src="../../static/admin/js/jquery-1.11.3.min.js"></script>
+    <![endif]-->
     <script src="../../static/admin/js/basic.js"></script>
 </head>
 
@@ -69,13 +71,13 @@
             </div>
 
             <div class="layui-form-item">
-                <label class="layui-form-label">验证身份证</label>
+                <label class="layui-form-label" style="width:120px;">验证身份证</label>
                 <div class="layui-input-block">
                     <input type="text" name="identity" lay-verify="identity" placeholder="" autocomplete="off" class="layui-input">
                 </div>
             </div>
             <div class="layui-form-item">
-                <label class="layui-form-label">自定义验证</label>
+                <label class="layui-form-label" style="width:120px;">自定义验证是</label>
                 <div class="layui-input-inline">
                     <input type="password" name="password" lay-verify="pass" placeholder="请输入密码" autocomplete="off" class="layui-input">
                 </div>
@@ -321,13 +323,13 @@
         </fieldset>
         <form class="layui-form layui-form-pane" action="">
             <div class="layui-form-item">
-                <label class="layui-form-label">长输入框</label>
+                <label class="layui-form-label" >长输入框</label>
                 <div class="layui-input-block">
                     <input type="text" name="title" autocomplete="off" placeholder="请输入标题" class="layui-input">
                 </div>
             </div>
             <div class="layui-form-item">
-                <label class="layui-form-label">短输入框</label>
+                <label class="layui-form-label" style="width:120px;">短输入框</label>
                 <div class="layui-input-inline">
                     <input type="text" name="username" lay-verify="required" placeholder="请输入" autocomplete="off" class="layui-input">
                 </div>
@@ -383,7 +385,7 @@
             </div>
 
             <div class="layui-form-item">
-                <label class="layui-form-label">行内选择框</label>
+                <label class="layui-form-label" style="width:120px;">行内选择框是</label>
                 <div class="layui-input-inline">
                     <select name="quiz1">
                         <option value="">请选择省</option>
