暂时隐藏右下角公司LOGO，增加弹窗展示页面

--- a/admin/index/index.html
+++ b/admin/index/index.html
@@ -127,11 +127,11 @@
                 </div>
             </div>
         </div>
-        <div class="jlsj">
+        <!--<div class="jlsj">
             <img src="../../static/admin/images/footerlogo.png" alt="健龙世纪">
-            <!--<p>医疗设备数字化管理产品和服务的</p>-->
-            <!--<p><b>开拓者 领航者</b></p>-->
-        </div>
+            &lt;!&ndash;<p>医疗设备数字化管理产品和服务的</p>&ndash;&gt;
+            &lt;!&ndash;<p><b>开拓者 领航者</b></p>&ndash;&gt;
+        </div>-->
     </div>
     <!--遮罩-->
     <!--<div class="main-mask" style="display:block; opacity: 0.9">-->
