--- a/admin/index/home/announcement.html
+++ b/admin/index/home/announcement.html
@@ -5,14 +5,14 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
-    <title>表格</title>
-    <link rel="stylesheet" type="text/css" href="../../static/admin/layui/css/layui.css"/>
-    <link rel="stylesheet" type="text/css" href="../../static/admin/css/admin.css"/>
-    <script src="../../static/admin/js/jquery-3.3.1.min.js"></script>
+    <title>通知公告</title>
+    <link rel="stylesheet" type="text/css" href="../../../static/admin/layui/css/layui.css"/>
+    <link rel="stylesheet" type="text/css" href="../../../static/admin/css/admin.css"/>
+    <script src="../../../static/admin/js/jquery-3.3.1.min.js"></script>
     <!--[if IE 8]>
-    <script type="text/javascript" src="../../static/admin/js/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="../../../static/admin/js/jquery-1.11.3.min.js"></script>
     <![endif]-->
-    <script src="../../static/admin/js/basic.js"></script>
+    <script src="../../../static/admin/js/basic.js"></script>
     <style>
         #tips {
             position: fixed;
@@ -38,30 +38,26 @@
 </head>
 
 <body>
-<div class="layui-row search_button">
-    <div class="col-xs-12">
-        <div class="test-table-reload-btn" style="margin-top: 20px;">
-            检索：
-            <div class="layui-inline">
-                <input class="layui-input" name="search" id="test-table-demoReload" autocomplete="off">
-            </div>
-            <button class="layui-btn" data-type="reload">搜索</button>
-        </div>
-    </div>
-</div>
+
 <div class="layui-row">
     <div class="col-xs-12">
         <table id="table" lay-filter="table1"></table>
     </div>
 </div>
 
-
-<script type="text/html" id="barDemo">
+<script type="text/html" id="toolBar">
+    检索：
+    <div class="layui-inline">
+        <input class="layui-input" name="search" id="test-table-demoReload" autocomplete="off">
+    </div>
+    <button class="layui-btn" data-type="reload">搜索</button>
+</script>
+<script type="text/html" id="bar">
     <a class="layui-btn layui-btn-sm layui-btn-normal" lay-event="detail">查看详情</a>
     <!--<a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>-->
     <!--<a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>-->
 </script>
-<script src="../../static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
+<script src="../../../static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
 <script>
     layui.use('table', function () {
         var table = layui.table;
@@ -69,27 +65,20 @@
         //第一个实例
         table.render({
             elem: '#table'
-            ,
-            page: true //开启分页
-            ,
-            toolbar: true
-            ,
-            height: 'full-80'
-            ,
-            title: '数据表'
-            ,
-            minWidth: 1200
-            ,
-            cols: [[ //表头
+            , page: true //开启分页
+            , toolbar: '#toolBar'
+            , height: 'full-25'
+            , title: '数据表'
+            , minWidth: 1200
+            , cols: [[ //表头
                 {field: 'announce_type', title: '公告类型', minWidth: 150, sort: true}
                 , {field: 'announce_name', title: '公告名称', width: '43%', minWidth: 400, event: 'openLink'}
                 , {field: 'Release_department', title: '发布部门', minWidth: 150, sort: true}
                 , {field: 'Release_date', title: '发布时间', minWidth: 150, sort: true}
                 , {field: 'cut_date', title: '有效期', minWidth: 150, sort: true}
-                , {fixed:'right',minWidth: 100,align:'center',toolbar: "#barDemo"}
+                , {fixed:'right',minWidth: 100,align:'center',toolbar: "#bar"}
             ]]
-            ,
-            "data": [
+            , "data": [
                 {
                     "announce_type": '100001000065456465',
                     "link": "./show_messages.html",
