--- a/admin/index/welcome.html
+++ b/admin/index/welcome.html
@@ -30,7 +30,7 @@
             <div class="h_panels chart-panel panel panel-default">
                 <div class="h_pad0 col-xs-12">
                     <div class="panel_title li_first_l1">
-                        <span class="li_first_left col-lg-11">待办任务</span>
+                        <span class="li_first_left col-lg-11">我的任务</span>
                         <a href="javascrip:void(0);" class="h_more li_first_right col-lg-1" data-id="11">更多 &gt;&gt;</a>
                     </div>
                     <div class="panel_con" h_name="need_do">
@@ -40,7 +40,7 @@
                     </div>
                 </div>
             </div>
-            <div class="h_panels chart-panel panel panel-default">
+            <!--<div class="h_panels chart-panel panel panel-default">
                 <div class="h_pad0 col-xs-12">
                     <div class="clearfix">
                         <div class="panel_title li_first_l2">
@@ -54,30 +54,30 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="h_panels chart-panel panel panel-default">
-                <div class="h_pad0 col-xs-12">
-                    <div class="clearfix">
-                        <div class="panel_title li_first_l3">
-                            <span class="li_first_left col-lg-11">个人工作记录</span>
-                            <a href="javascrip:void(0);" class="h_more li_first_right col-lg-1" data-id="14">更多 &gt;&gt;</a>
-                        </div>
-                        <div class="panel_con" h_name="personal_record">
-                            <ul>
-                                <li>暂无内容</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            </div>-->
+
         </div>
         <div class="welcome-right-container col-lg-4">
             <ul class="h_panels1">
+
+                    <li class="h_panels h_pad0 col-lg-12 col-sm-12 col-md-4 col-xs-12">
+                        <div class="clearfix">
+                            <div class="panel_title li_first_l3">
+                                <span class="li_first_left col-lg-9">提醒事项</span>
+                                <a href="javascrip:void(0);" class="h_more li_first_right col-lg-3" data-id="12">更多 &gt;&gt;</a>
+                            </div>
+                            <div class="panel_con" h_name="personal_record">
+                                <ul>
+                                    <li>暂无内容</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </li>
                 <li class="h_panels h_pad0 col-lg-12 col-sm-12 col-md-4 col-xs-12">
                     <div class="clearfix">
                         <div class="panel_title li_first">
-                            <span class="col-lg-9 li_first_left">公告栏</span>
-                            <a href="javascrip:void(0);" class="h_more col-lg-3 li_first_right" data-id="16">更多 &gt;&gt;</a>
+                            <span class="col-lg-9 li_first_left">通知公告</span>
+                            <a href="javascrip:void(0);" class="h_more col-lg-3 li_first_right" data-id="14">更多 &gt;&gt;</a>
                         </div>
                         <div class="panel_con" h_name="announce">
                             <ul>
@@ -86,7 +86,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="h_panels h_pad0 col-lg-12 col-sm-12 col-md-4 col-xs-12">
+                <!--<li class="h_panels h_pad0 col-lg-12 col-sm-12 col-md-4 col-xs-12">
                     <div class="clearfix">
                         <div class="panel_title li_first">
                             <span class="col-lg-9 li_first_left">系统消息</span>
@@ -98,12 +98,12 @@
                             </ul>
                         </div>
                     </div>
-                </li>
+                </li>-->
                 <li class="h_panels h_pad0 col-lg-12 col-sm-12 col-md-4 col-xs-12">
                     <div class="clearfix">
                         <div class="panel_title li_first">
                             <span class="col-lg-9 li_first_left">公共信息</span>
-                            <a href="javascript:void(0);" class="h_more col-lg-3 li_first_right" data-id="18">更多 &gt;&gt;</a>
+                            <a href="javascript:void(0);" class="h_more col-lg-3 li_first_right" data-id="15">更多 &gt;&gt;</a>
                         </div>
                         <div class="panel_con" h_name="public_info">
                             <ul>
@@ -305,8 +305,8 @@
             });
         $(function(){
             $(".panel_con a").on('click',function(){
-                var w = document.body.clientWidth - 20;
-                var h = document.body.clientHeight - 20;
+                var w = document.body.clientWidth - 20
+                    ,h = document.body.clientHeight - 20;
                 layer.open({
                     type:2,
                     title:"详情信息",
